<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="LoginViewModel"
            type="com.example.dormhelper.screens.login.LoginViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.login.LoginFragment"
        android:background="@color/black">

        <View
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <view
            android:id="@+id/view"
            class="androidx.cardview.widget.CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:cardElevation="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/login"
                    android:textColor="@color/purple_200"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/usernameHint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@={LoginViewModel.username}"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/passwordHint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:text="@={LoginViewModel.password}"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/navigateToRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/registration"
                    android:onClick="@{() -> LoginViewModel.navigateToRegister()}"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold" />

            </LinearLayout>
        </view>

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="42dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto"
            android:onClick="@{() -> LoginViewModel.loginClicked()}"
            android:text="@string/loginButton"
            android:textColor="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="58dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto"
            android:onClick="@{() -> LoginViewModel.onCancelClicked()}"
            android:text="@string/cancelButton"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="172dp"
            android:fontFamily="@font/roboto"
            android:text="@={LoginViewModel.loginError}"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="155dp"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/decoration"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/dorm_helper" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>